[gd_scene load_steps=11 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://World1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Castle Dracustein.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Backgrounds/lava-background-63rtzug0vgtx2v5u.jpg" type="Texture" id=4]
[ext_resource path="res://soundtracks/Main Menu.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )
mainGameScene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 599.0
color = Color( 0.34902, 0.215686, 0.258824, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.5, 297 )
scale = Vector2( 0.531771, 0.546296 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1021.0
margin_bottom = 599.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 50.0
margin_right = 900.0
margin_bottom = 549.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 247.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Demonbane:
Castle Of Eternal Night"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 700.0
margin_bottom = 499.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 650.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 700.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="About" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 50.0
margin_right = 650.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "About"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 700.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 650.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Controls"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 700.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 650.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Exit" to="." method="_on_Exit_pressed"]
